--- a/views/about.hbs
+++ b/views/about.hbs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-           Node-web
+           Node-web_about
         </title>
     </head>
     <body>
