--- a/views/project.hbs
+++ b/views/project.hbs
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>
-         Node-web_home
+           Node-web_project
         </title>
     </head>
     <body>
         {{>header}}
-        <p>{{screamIt welcomeMessage}}</p>
+        <p> Some text here</p>
         {{>footer}}
     </body>
 </html>
