--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -10,6 +10,7 @@
            <h1>{{pageTitle}}</h1>
            <p><a href="/">Home</a></p>
            <p><a href="/about">About</a></p>
+           <p><a href="/project">Projects</a></p>
        </header>
     </body>
 </html>
